<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">
    <ScrollView
        android:id="@+id/ScrolId"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Name"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.appcompat.widget.AppCompatTextView>
            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#3F51B5"
                app:layout_constraintTop_toBottomOf="@id/nameTxt"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/nameEd"
                android:layout_marginTop="15dp"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.AppCompatEditText>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ageTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/Age"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/nameEd"
                tools:layout_editor_absoluteX="16dp"
                tools:ignore="MissingConstraints">

            </androidx.appcompat.widget.AppCompatTextView>
            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#3F51B5"
                app:layout_constraintTop_toBottomOf="@id/ageTxt"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/AgeEd"
                android:layout_marginTop="15dp"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.AppCompatEditText>

            <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/phoneTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/Phone"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/AgeEd"
            tools:layout_editor_absoluteX="16dp"
            tools:ignore="MissingConstraints">

        </androidx.appcompat.widget.AppCompatTextView>
            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#3F51B5"
                app:layout_constraintTop_toBottomOf="@id/phoneTxt"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/phoneEd"
                android:layout_marginTop="15dp"
                android:inputType="phone"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.AppCompatEditText>

            <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/body_weightTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/BodyWeight"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/phoneEd"
            tools:layout_editor_absoluteX="16dp"
            tools:ignore="MissingConstraints">

        </androidx.appcompat.widget.AppCompatTextView>
            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#3F51B5"
                app:layout_constraintTop_toBottomOf="@id/body_weightTxt"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/body_weightEd"
                android:layout_marginTop="15dp"
                android:inputType="numberDecimal"
                app:layout_constraintTop_toBottomOf="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.AppCompatEditText>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ProfessionTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/Profession"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/body_weightEd"
                tools:layout_editor_absoluteX="16dp"
                tools:ignore="MissingConstraints">

            </androidx.appcompat.widget.AppCompatTextView>
            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#3F51B5"
                app:layout_constraintTop_toBottomOf="@id/ProfessionTxt"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ProfessionEd"
                android:layout_marginTop="15dp"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.AppCompatEditText>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hightTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/Height"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/ProfessionEd"
                tools:layout_editor_absoluteX="16dp"
                tools:ignore="MissingConstraints">

            </androidx.appcompat.widget.AppCompatTextView>
            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#3F51B5"
                app:layout_constraintTop_toBottomOf="@id/hightTxt"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/HightEd"
                android:layout_marginTop="15dp"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.AppCompatEditText>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/UniversityTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/University"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/HightEd"
                tools:layout_editor_absoluteX="16dp"
                tools:ignore="MissingConstraints">

            </androidx.appcompat.widget.AppCompatTextView>
            <View
                android:id="@+id/view6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#3F51B5"
                app:layout_constraintTop_toBottomOf="@id/UniversityTxt"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/UniversityEd"
                android:layout_marginTop="15dp"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/view6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.AppCompatEditText>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/semisterTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/Semister"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/UniversityEd"
                tools:layout_editor_absoluteX="16dp"
                tools:ignore="MissingConstraints">

            </androidx.appcompat.widget.AppCompatTextView>
            <View
                android:id="@+id/view7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#3F51B5"
                app:layout_constraintTop_toBottomOf="@id/semisterTxt"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/semisterEd"
                android:layout_marginTop="15dp"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@+id/view7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.AppCompatEditText>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:layout_marginTop="88dp"
                android:text="@string/Save"
                android:textAllCaps="false"
                android:textSize="25dp"
                android:background="@drawable/button"
                app:layout_constraintTop_toBottomOf="@+id/semisterEd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >

            </androidx.appcompat.widget.AppCompatButton>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>